--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/community": "^0.3.48",
+    "@langchain/core": "^0.3.62",
+    "@langchain/openai": "^0.5.18",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -27,8 +30,11 @@
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "deepseek": "^0.0.2",
+    "dotenv": "^16.4.5",
     "finnhub-ts": "^1.0.7",
     "framer-motion": "^12.18.1",
+    "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.427.0",
     "mongodb": "^6.17.0",
@@ -36,6 +42,7 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -52,6 +59,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18",
     "eslint": "^8",
