--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "deepseek": "^0.0.2",
     "dotenv": "^16.4.5",
     "finnhub-ts": "^1.0.7",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.18.1",
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
@@ -53,6 +54,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -62,6 +64,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
