--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "lucide-react": "^0.427.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.5.3",
-    "next": "14.2.5",
+    "next": "^14.2.31",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.14",
     "papaparse": "^5.4.1",
     "react": "^18",
