--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/xlsx": "^0.0.35",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
