--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.427.0",
-    "mongodb": "^6.17.0",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.5.3",
     "next": "^14.2.31",
     "next-auth": "^4.24.7",
@@ -54,6 +54,7 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "recharts": "^2.12.7",
+    "regenerator-runtime": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
